--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "nanoid": "^5.0.4",
     "vanjs-core": "^1.2.7",
     "vanjs-ext": "^0.2.0",
-    "vanjs-routing": "^1.1.0"
+    "vanjs-form": "^1.0.0",
+    "vanjs-routing": "^1.1.3",
+    "yup": "^1.3.3"
   }
 }
